# marimo_openscad

./: .coverage  .eslintrc.js  .eslintrc.mjs  .gitignore  BROWSER_TESTING_COMPLETE.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TEST_SUMMARY.md  CRITICAL_ISSUES_ANALYSIS.md  CSG_RENDERING_ROADMAP.md  LICENSE  LLM_ADVICE_FOR_TESTS.md  MARIMO_BUG_REPORT.md  MARIMO_TECHNICAL_KNOWLEDGE_BASE.md  MASTER_IMPLEMENTATION_TIMELINE.md  MASTER_KNOWLEDGE_AND_PLANNING_DOCUMENT.md  Makefile  PHASE_1_2_TEST_GAPS_ANALYSIS.md  PHASE_1_GAP_CLOSURE_COMPLETE.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_2_GAP_CLOSURE_COMPLETE.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_3_1_COMPLETION_SUMMARY.md  PHASE_3_2_COMPLETION_SUMMARY.md  PHASE_3_3_IMPLEMENTATION_PLAN.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_IMPLEMENTATION_PLAN_v2.md  PHASE_4_4_COMPLETION_SUMMARY.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_5_3_2_COMPLETION_SUMMARY.md  PROFESSIONAL_TEST_MIGRATION_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  REAL_FUNCTIONALITY_AUDIT_RESULTS.md  REAL_STL_PIPELINE_ANALYSIS.md  REVISED_REALISTIC_IMPLEMENTATION_PLAN.md  SYSTEMATIC_FIX_PLAN.md  TESTING_GUIDE.md  TEST_FAILURE_ANALYSIS.md  TEST_MIGRATION_STRATEGY.md  (+46 more)
.github/workflows/: test.yml
coverage/: index.html  marimo-openscad-widget.js.html  memory-manager.js.html  openscad-direct-renderer.js.html  openscad-wasm-renderer.js.html  openscad-worker.js.html  wasm-cache-manager.js.html  wasm-loader.js.html  widget.js.html  worker-manager.js.html
docs/: api.md  architecture.md  installation.md
examples/: basic_shapes.py  castle_demo.py  mechanical_parts.py  migration_guide_demo.py  simple_demo.py  test_wasm_integration.py  wasm_advanced_features.py  wasm_performance_demo.py
public/: index.html
scripts/: download-wasm-modules.js  optimize-wasm-assets.js  verify-wasm-build.js
src/js/: marimo-openscad-widget.js  memory-manager.js  openscad-direct-renderer.js  openscad-wasm-renderer.js  openscad-worker.js  wasm-loader.js  widget.js  worker-manager.js
src/marimo_openscad/: __init__.py  community_model_tester.py  interactive_viewer.py  migration_engine.py  openscad_renderer.py  openscad_wasm_renderer.py  realtime_renderer.py  renderer_config.py  solid_bridge.py  version_manager.py  viewer.py  viewer_backup.py  viewer_phase2.py  viewer_phase3.py  viewer_step1.py  viewer_step2.py  viewer_step3.py  viewer_step4.py  viewer_step5.py  wasm_asset_server.py  wasm_http_server.py  wasm_version_manager.py
src/marimo_openscad/js/: openscad-worker.js  wasm-cache-manager.js  widget.js
src/marimo_openscad/static/: asset-summary.json  build-verification-report.json  optimization-manifest.json  widget-bundle.js  widget-bundle.umd.js  widget.es.js  widget.umd.js
src/marimo_openscad/static/wasm/: manifest.json
src/test/: README.md  marimo-widget.test.js  performance-benchmark.js  phase-5-2-3-accessibility.test.js  phase-5-2-4-mobile-touch.test.js  phase-5-2-embedded-features.test.js  phase-5-2-error-handling.test.js  phase-5-2-integration.test.js  phase-5-2-progressive-loading.test.js  phase-5-3-1-performance-monitor.test.js  phase-5-3-2-adaptive-quality.test.js  phase-5-3-3-resource-optimization.test.js  setup.js  setup.js.backup  wasm-bridge.test.js  wasm-test-fixtures.js  widget.test.js
tests/: README.md  __init__.py  binary_encoding_analysis.json  bundle_environment_analysis.json  communication_infrastructure_analysis.json  concurrent_baseline_data.json  conftest.py  error_handling_analysis.json  import_resolution_analysis.json  js_pipeline_analysis.json  marimo_environment_analysis.json  memory_baseline_data.json  performance_baseline_data.json  phase2_bundle_analysis.json  phase2_comparison_analysis.json  phase2_memory_analysis.json  phase2_performance_analysis.json  platform_compatibility_analysis.json  playwright_config.py  serialization_analysis.json  test_async_communication_bridge.py  test_browser_wasm_real.py  test_cache_behavior.py  test_ci_async_fix.py  test_ci_environment_compatibility.py  test_community_model_tester.py  test_cross_environment_validation.py  test_csg_ci_integration.py  test_csg_phase1.py  test_e2e_anywidget_real.py  test_e2e_console_errors.py  test_e2e_marimo_real.py  test_e2e_wasm_failures.py  test_hybrid_renderer_ci_compatible.py  test_hybrid_renderer_system.py  test_javascript_validation.py  test_llm_identified_issues.py  test_migration_engine.py  test_performance_baseline.py  test_performance_validation_real.py  (+25 more)
tests/test_files/: anywidget_test_environment.html
