[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "marimo-openscad"
description = "Interactive 3D CAD modeling in Marimo notebooks using SolidPython2 and OpenSCAD"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude Code Assistant", email = "noreply@anthropic.com"},
]
maintainers = [
    {name = "Claude Code Assistant", email = "noreply@anthropic.com"},
]
keywords = [
    "marimo",
    "openscad", 
    "solidpython",
    "3d",
    "cad",
    "modeling",
    "visualization",
    "parametric",
    "notebook"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "marimo>=0.8.0",
    "solidpython2>=1.0.0",
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/yourusername/marimo-openscad"
Documentation = "https://github.com/yourusername/marimo-openscad/blob/main/docs/"
Repository = "https://github.com/yourusername/marimo-openscad.git"
"Bug Tracker" = "https://github.com/yourusername/marimo-openscad/issues"
Changelog = "https://github.com/yourusername/marimo-openscad/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["marimo_openscad*"]

[tool.setuptools_scm]
write_to = "src/marimo_openscad/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=marimo_openscad --cov-report=term-missing"