[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "marimo-openscad"
description = "Interactive 3D CAD modeling in Marimo notebooks using SolidPython2 and OpenSCAD"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Max Külshammer", email = "max.kuelshammer@gmail.com"},
]
maintainers = [
    {name = "Max Külshammer", email = "max.kuelshammer@gmail.com"},
]
keywords = [
    "marimo",
    "openscad", 
    "solidpython",
    "3d",
    "cad",
    "modeling",
    "visualization",
    "parametric",
    "notebook"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education", 
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "marimo>=0.8.0",
    "solidpython2>=1.0.0",
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/kuelshammer/marimo-openscad"
Documentation = "https://github.com/kuelshammer/marimo-openscad/blob/main/docs/"
Repository = "https://github.com/kuelshammer/marimo-openscad.git"
"Bug Tracker" = "https://github.com/kuelshammer/marimo-openscad/issues"
Changelog = "https://github.com/kuelshammer/marimo-openscad/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["marimo_openscad*"]

[tool.setuptools.package-data]
marimo_openscad = [
    "wasm/*.wasm",
    "wasm/*.js", 
    "wasm/*.d.ts",
    "js/*.js"
]

[tool.setuptools_scm]
write_to = "src/marimo_openscad/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=marimo_openscad --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "cache: marks tests related to caching behavior",
    "regression: marks tests that prevent regression of known issues",
    "hybrid_renderer: marks tests for hybrid renderer system",
    "ci_compatibility: marks tests for CI/CD environment compatibility",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "twine>=6.1.0",
]
